# whimo-backend

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml
ci/: .gitlab-ci.yml
config/: .env.sample
deploy/: api.Dockerfile  docker-compose.yaml  docs.Dockerfile  nginx.conf
docs/: openapi.yaml
docs/components/analytics/: responses.yaml
docs/components/commodities/: parameters.yaml  responses.yaml  schemas.yaml
docs/components/common/: errors.yaml  parameters.yaml  schemas.yaml
docs/components/conversions/: parameters.yaml  responses.yaml  schemas.yaml
docs/components/notifications/: parameters.yaml  requests.yaml  responses.yaml  schemas.yaml
docs/components/system/: responses.yaml
docs/components/transactions/: parameters.yaml  requests.yaml  responses.yaml  schemas.yaml
docs/components/users/: parameters.yaml  requests.yaml  responses.yaml  schemas.yaml
locale/en_US/LC_MESSAGES/: django.po
locale/es_ES/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
tests/: conftest.py
tests/apps/analytics/: test_analytics.py  test_analytics_chain_tracing.py
tests/apps/commodities/: test_commodities_balances_list.py  test_commodities_groups_list.py  test_commodities_list.py
tests/apps/common/: test_exception_handler.py
tests/apps/notifications/: test_notification_detail.py  test_notifications_devices_add.py  test_notifications_devices_list.py  test_notifications_list.py  test_notifications_service.py  test_notifications_settings_list.py  test_notifications_settings_update.py  test_notifications_status_update.py
tests/apps/services/: test_notifications_list.py
tests/apps/transactions/: fixtures.py  test_conversion_recipes_list.py  test_recipe_based_conversion.py  test_schemas_requests.py  test_transactions_accept.py  test_transactions_chain_bundle_download.py  test_transactions_chain_csv_download.py  test_transactions_chain_download.py  test_transactions_detail.py  test_transactions_downstream_create.py  test_transactions_export.py  test_transactions_geodata_request.py  test_transactions_geodata_update.py  test_transactions_list.py  test_transactions_list_csv_download.py  test_transactions_notification_resend.py  test_transactions_producer_create.py  test_transactions_reject.py  test_transactions_traceability_counts.py
tests/apps/users/: test_gadgets_create.py  test_gadgets_delete.py  test_gadgets_exists.py  test_schemas_requests.py  test_users_profile.py  test_users_profile_delete.py  test_users_profile_password_change.py
tests/factories/: balances.py  base.py  commodities.py  conversions.py  notifications.py  seasons.py  transactions.py  users.py
tests/fixtures/location_file/: geo.json  geo_multiple.json
tests/helpers/: clients.py  constants.py  utils.py
whimo/: entrypoint.sh  settings.py  urls.py
whimo/analytics/: apps.py  constants.py  services.py  urls.py  views.py
whimo/analytics/schemas/: dto.py
whimo/auth/jwt/: apps.py  mappers.py  services.py  urls.py  views.py
whimo/auth/otp/: apps.py  constances.py  urls.py  views.py
whimo/auth/registration/: apps.py  services.py  urls.py  views.py
whimo/auth/social/: apps.py  service.py  urls.py  views.py
whimo/commodities/: apps.py  urls.py  views.py
whimo/commodities/mappers/: balances.py  commodities.py  commodities_groups.py
whimo/commodities/schemas/: dto.py  requests.py
whimo/commodities/services/: balances.py  commodities.py
whimo/common/: __init__.py  apps.py  asgi.py  authentication.py  celery.py  encoders.py  throttling.py  utils.py  views.py  wsgi.py
whimo/common/schemas/: base.py  dto.py  errors.py
whimo/common/validators/: auth.py
whimo/contrib/: apps.py  utils.py
whimo/contrib/admin/: __init__.py  balances.py  celery.py  commodities.py  conversions.py  dashboard.py  notifications.py  seasons.py  transactions.py  users.py
whimo/contrib/tasks/: __init__.py  cleanup.py  notifications.py  season_distribution.py  transactions.py  users.py
whimo/db/: apps.py
whimo/db/enums/: __init__.py  notifications.py  transactions.py  users.py
whimo/db/migrations/: 0001_create_models.py  0001_initial.py  0002_populate_commodities.py  0002_transaction_created_by.py  0003_migrate_transaction_created_by.py  0003_register_periodic_tasks.py  0004_alter_transaction_created_by.py  0005_alter_commodity_group.py  0006_historicaltransaction_traceability_and_more.py  0007_alter_historicaltransaction_traceability_and_more.py  0008_create_balances.py  0009_alter_balance_commodity.py  0010_alter_historicaltransaction_traceability_and_more.py  0011_historicaltransaction_is_buying_from_farmer_and_more.py  0012_historicaltransaction_is_automatic_and_more.py  0013_historicaluser_is_deleted_user_is_deleted.py  0014_historicaltransaction_expires_at_and_more.py  0015_expire_transactions_task.py  0016_historicalnotification_notification.py  0017_alter_historicalnotification_status_and_more.py  0018_alter_historicalnotification_type_and_more.py  0019_notificationsettings.py  0020_create_notifications_settings.py  0021_rename_latitude_historicaltransaction_farm_latitude_and_more.py  0022_historicaltransaction_farm_latitude_and_more.py  0023_seed_commodities.py  0024_gadget_cleanup_task.py  0025_commodity_name_variants.py  0026_populate_commodity_name_variants.py  0027_harvest_season.py  0028_season_distribution_task.py
whimo/db/models/: __init__.py  balances.py  base.py  commodities.py  conversions.py  notifications.py  seasons.py  transactions.py  users.py
whimo/db/storages/: __init__.py  transactions.py  users.py
whimo/notifications/: apps.py  urls.py  views.py
whimo/notifications/mappers/: notifications.py  notifications_push.py  notifications_settings.py
whimo/notifications/schemas/: dto.py  errors.py  requests.py  responses.py
whimo/notifications/services/: notifications.py  notifications_push.py  notifications_settings.py
whimo/system/: apps.py  urls.py  views.py
whimo/system/schemas/: responses.py
whimo/transactions/: apps.py  constants.py  mappers.py  services.py  urls.py  views.py
whimo/users/: apps.py  urls.py  views.py
(+118 files in other folders)
